src/objects/OFFERING_MAPPER__c/OFFERING_MAPPER__c.object-meta.xml
<CustomObject>
    <description>Retrofit Modification Upgrade</description>
    <label>Offering Platform</label>
    <nameField>
        <label>Offering Platform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offering Platforms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>