src/objects/OFFERING_MAPPER__c/fields/Aircraft_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Open_Count__c</fullName>
    <label>Aircraft Open Count</label>
    <summarizedField>Account_Eligible_RMU_Fleet_Asset__c.Aircraft_Open_Count__c</summarizedField>
    <summaryForeignKey>Account_Eligible_RMU_Fleet_Asset__c.RMU_Platform__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>