src/objects/OFFERING_MAPPER__c/fields/Aircraft_Platform__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Platform</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Platform__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Platform__c.FA_Xref_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Platform__c</referenceTo>
    <relationshipName>OFFERING_MAPPER</relationshipName>
    <type>Lookup</type>
</CustomField>