src/objects/OFFERING_MAPPER__c/fields/RMU_DEALER_PRC__c.field-meta.xml
<CustomField>
    <fullName>RMU_DEALER_PRC__c</fullName>
    <label>Offering Dealer Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>