src/objects/OFFERING_MAPPER__c/fields/RMU_VALUE__c.field-meta.xml
<CustomField>
    <fullName>RMU_VALUE__c</fullName>
    <label>Offering Value</label>
    <referenceTo>RMU_VALUE__c</referenceTo>
    <relationshipLabel>Offering Platforms</relationshipLabel>
    <relationshipName>OFFERING_MAPPER</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>