src/objects/OFFERING_MAPPER__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RMU_VALUE__c</columns>
    <columns>NAME</columns>
    <columns>Aircraft_Platform__c</columns>
    <columns>LAUNCH_STATUS_TXT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>