src/objects/OFFERING_MAPPER__c/listViews/AutoGen.listView-meta.xml
<ListView>
    <fullName>AutoGen</fullName>
    <columns>RMU_VALUE__c</columns>
    <columns>NAME</columns>
    <columns>Aircraft_Platform__c</columns>
    <columns>RMU_IND__c</columns>
    <columns>LAUNCH_STATUS_TXT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAUNCH_STATUS_TXT__c</field>
        <operation>equals</operation>
        <value>AutoGen</value>
    </filters>
    <label>AutoGen</label>
</ListView>