src/objects/OFFERING_MAPPER__c/listViews/Boeing.listView-meta.xml
<ListView>
    <fullName>Boeing</fullName>
    <columns>RMU_VALUE__c</columns>
    <columns>NAME</columns>
    <columns>Aircraft_Platform__c</columns>
    <columns>RMU_IND__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RMU_VALUE__c</field>
        <operation>equals</operation>
    </filters>
    <label>Boeing</label>
</ListView>