src/objects/OFFERING_MAPPER__c/listViews/BulkLoadNoSIPView.listView-meta.xml
<ListView>
    <fullName>BulkLoadNoSIPView</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>RMU_VALUE__c</columns>
    <columns>NAME</columns>
    <columns>LAUNCH_STATUS_TXT__c</columns>
    <columns>Technical_Sales_Manager__c</columns>
    <columns>TECH_SALES_LEAD_TXT__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAUNCH_STATUS_TXT__c</field>
        <operation>equals</operation>
        <value>Bulk Load</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>SIP -</value>
    </filters>
    <label>Bulk Load No SIP View</label>
    <language>en_US</language>
</ListView>