src/objects/OFFERING_MAPPER__c/listViews/CreatedByPC.listView-meta.xml
<ListView>
    <fullName>CreatedByPC</fullName>
    <columns>RMU_VALUE__c</columns>
    <columns>NAME</columns>
    <columns>Aircraft_Platform__c</columns>
    <columns>RMU_IND__c</columns>
    <columns>LAUNCH_STATUS_TXT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>gnSFDCSPIRAL API User</value>
    </filters>
    <label>Created By PC</label>
    <language>en_US</language>
</ListView>